--- a/SADM.iOS/SADM.iOS.csproj
+++ b/SADM.iOS/SADM.iOS.csproj
@@ -48,10 +48,9 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
     <MtouchArch>ARMv7, ARMv7s, ARM64</MtouchArch>
-    <CodesignKey>iPhone Developer: Alejandro Lemus Rodriguez (E8498YR56M)</CodesignKey>
+    <CodesignKey>iPhone Developer: Alejandro Perez (2268B3S89W)</CodesignKey>
     <MtouchDebug>true</MtouchDebug>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
-    <CodesignProvision>SADM Dev</CodesignProvision>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
@@ -301,6 +300,7 @@
     <BundleResource Include="Resources\switchon.png" />
     <BundleResource Include="Resources\switchon%402x.png" />
     <BundleResource Include="Resources\switchon%403x.png" />
+    <BundleResource Include="Resources\factura.png" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
