--- a/SADM.Android/Properties/AndroidManifest.xml
+++ b/SADM.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.totaltech.sadm">
-	<uses-sdk android:minSdkVersion="17" />
-    
+	<uses-sdk android:minSdkVersion="17" android:targetSdkVersion="27" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.FLASHLIGHT" />
@@ -12,10 +11,9 @@
 	<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
 	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />   
-    <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.CALL_PHONE" />
+	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-feature android:glEsVersion="0x00020000" android:required="true" />
 	<application android:allowBackup="true" android:label="SADM" android:supportsRtl="true" android:theme="@style/MainTheme" android:icon="@mipmap/ic_launcher">
 		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
