Se agrega cambios del webapi
webapi

--- a/SADM/SADM.csproj
+++ b/SADM/SADM.csproj
@@ -55,6 +55,9 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>AppResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\PaymentBanamex.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Compile Update="AppResources.Designer.cs">
