--- a/SADM.Android/Properties/AndroidManifest.xml
+++ b/SADM.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.totaltech.sadm">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.totaltech.sadmv2" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="17" android:targetSdkVersion="27" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.CAMERA" />
@@ -15,7 +15,7 @@
 	<uses-permission android:name="android.permission.CALL_PHONE" />
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-feature android:glEsVersion="0x00020000" android:required="true" />
-	<application android:allowBackup="true" android:label="SADM" android:supportsRtl="true" android:theme="@style/MainTheme" android:icon="@mipmap/ic_launcher">
+	<application android:allowBackup="true" android:label="SADMv2" android:supportsRtl="true" android:theme="@style/MainTheme" android:icon="@mipmap/ic_launcher">
 		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyB7PdFV5A9xAXuBTY2ZIw_Jlk8blh_ilZM" />
 	</application>
