--- a/SADM.Android/SADM.Android.csproj
+++ b/SADM.Android/SADM.Android.csproj
@@ -10,7 +10,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SADM.Droid</RootNamespace>
-    <AssemblyName>SADM.Android</AssemblyName>
+    <AssemblyName>SADM1.Android</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkVersion>v8.1</TargetFrameworkVersion>
     <AndroidApplication>True</AndroidApplication>
