--- a/SADM.iOS/SADM.iOS.csproj
+++ b/SADM.iOS/SADM.iOS.csproj
@@ -64,6 +64,8 @@
     <CodesignKey>iPhone Distribution: TOTALSYSTEMS SA DE CV (6CDA8VWZT6)</CodesignKey>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     <CodesignProvision>SADM Dis AdHoc</CodesignProvision>
+    <BuildIpa>true</BuildIpa>
+    <MtouchSdkVersion>12.1</MtouchSdkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Ad-Hoc|iPhone' ">
     <DebugType>none</DebugType>
@@ -337,6 +339,9 @@
     </PackageReference>
     <PackageReference Include="Xam.Plugins.Messaging">
       <Version>5.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Build.Download">
+      <Version>0.4.11</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
