--- a/SADM.iOS/Info.plist
+++ b/SADM.iOS/Info.plist
@@ -44,5 +44,9 @@
 	<string>$(PRODUCT_NAME) user your calendar.</string>
 	<key>CFBundleVersion</key>
 	<string>3</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Need permission to save files.</string>
+	<key>UIFileSharingEnabled</key>
+	<true/>
 </dict>
 </plist>
