[UPDATE] Update Xamarin.Forms

--- a/SADM.Android/SADM.Android.csproj
+++ b/SADM.Android/SADM.Android.csproj
@@ -61,7 +61,7 @@
       <Version>1.4.118</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms">
-      <Version>3.0.0.482510</Version>
+      <Version>3.4.0.1029999</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.Design">
       <Version>27.0.2</Version>
