--- a/SADM.Android/SADM.Android.csproj
+++ b/SADM.Android/SADM.Android.csproj
@@ -103,6 +103,9 @@
     <PackageReference Include="Microsoft.AppCenter.Analytics">
       <Version>1.13.0</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Plugin.Geolocator">
+      <Version>4.5.0.6</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
