--- a/SADM.iOS/Info.plist
+++ b/SADM.iOS/Info.plist
@@ -43,7 +43,7 @@
 	<key>NSCalendarsUsageDescription</key>
 	<string>$(PRODUCT_NAME) user your calendar.</string>
 	<key>CFBundleVersion</key>
-	<string>3.3</string>
+	<string>3.6</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>Need permission to save files.</string>
 	<key>UIFileSharingEnabled</key>
@@ -71,5 +71,7 @@
 	</dict>
 	<key>LSSupportsOpeningDocumentsInPlace</key>
 	<true/>
+	<key>NSLocationWhenInUsageDescription</key>
+	<string>Can we use your location when your app is being used?</string>
 </dict>
 </plist>
